Replace j.x.b.DatatypeConverter with Apache commons-codec Base64 (fix #37)